<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="error_Printf" Id="{e86b548f-0fd1-4186-b6e0-397fbeb0a7dc}" SpecialFunc="None">
    <Declaration><![CDATA[//设备报警信息打印
FUNCTION error_Printf : BOOL
VAR_INPUT
	errorID					:DINT;
END_VAR
VAR
	sErrTXT					:STRING(255);
	sErrWTXT				:WSTRING(255);
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[sErrTXT:=errorMonitor.getErrTXT(errorID);
sErrWTXT:=errorMonitor.getErrWTXT(errorID);
IF gCNErrShow THEN
	gLog.append_EX(sErrWTXT);
	gErrWTxtShow:=sErrWTXT;
ELSE
	gLog.append(sErrTXT);
	gErrTxtShow:=sErrTXT;
	gErrWTxtShow:=TO_WSTRING(gErrTxtShow);
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="error_Printf">
      <LineId Id="19" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="65" Count="1" />
      <LineId Id="55" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="63" Count="1" />
      <LineId Id="62" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="28" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>